--- a/TopoSort-BFS/TopoSort-BFS.vcxproj
+++ b/TopoSort-BFS/TopoSort-BFS.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{C42BCED8-C4DD-460B-8397-1AE9E818CA62}</ProjectGuid>
+    <ProjectGuid>{17E6E27D-C7D0-4A67-B39B-563AC7DF335F}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>TopoSort</RootNamespace>
+    <RootNamespace>TopoSortBFS</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
