--- a/TopoSort-BFS/TopoSort-BFS.vcxproj
+++ b/TopoSort-BFS/TopoSort-BFS.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="TopoSort.cpp" />
+    <ClCompile Include="TopoSort-BFS.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
