--- a/TopoSort-DFS/TopoSort-DFS.vcxproj
+++ b/TopoSort-DFS/TopoSort-DFS.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="TopoSort.cpp" />
+    <ClCompile Include="TopoSort-DFS.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
